--- a/public/css/home/create/zhuce.css
+++ b/public/css/home/create/zhuce.css
@@ -36,9 +36,7 @@
 }
 #body-right{
 	float:right;
-	width:350px;
-	/* border:1px solid red; */
-	margin-right:20px;
+	width:380px;
 	margin-top:50px;
 	line-height:50px;
 }
@@ -57,7 +55,7 @@
 	width:250px;
 	
 }
-#b{
+.b{
 	height:30px;
 }
 #button{
@@ -82,4 +80,11 @@
 	font-size:12px;
 	/* border:1px solid red; */
 	padding-right:-100px;
+}
+#form{
+    float:left;
+}
+#errors{
+        fload:right;
+        margin-top:50px;
 }
