--- a/public/css/home/login/denglu.css
+++ b/public/css/home/login/denglu.css
@@ -97,3 +97,16 @@
 #free{
 	color:#f10180;
 }
+
+span.error {
+    font:13px Arial;
+    color:gray;
+    background:url(/images/admin/login/error.gif) no-repeat left center;
+    margin: 0 0 0 5px;
+    padding: 0 0 0 15px;
+}
+span.right {
+    background:url(/images/admin/login/right.gif) no-repeat left center;
+    margin: 0 0 0 5px;
+    padding: 0 0 0 15px;
+}
